<resources>
    <string name="app_name">DmuIT</string>

    <!-- Main Activity -->
    <string name="main_go_home_activity">홈 이동</string>

    <!-- Home Activity -->
    <string name="home_go_main_activity">초기 페이지 이동</string>

    <!-- Bottom Navigation -->
    <string name="nav_item_team"> 팀빌딩 </string>
    <string name="nav_item_study"> 스터디 </string>
    <string name="nav_item_community"> 커뮤니티 </string>
    <string name="nav_item_profile"> 마이페이지 </string>
    <string name="nav_item_group"> 그룹페이지 </string>

    <!-- Splash Activity -->
    <string name="splash_activity_title">타이틀 페이지</string>

    <string-array name="team_post_field_item">
        <item>선택안함</item>
        <item>Web</item>
        <item>Mobile</item>
        <item>Game</item>
        <item>Software</item>
    </string-array>

    <string-array name="team_post_class_item">
        <item>선택안함</item>
        <item>1YJ</item>
        <item>1YK</item>
        <item>2YJ</item>
        <item>2YK</item>
        <item>3YK</item>
        <item>3YJ</item>
        <item>4YJ</item>
        <item>4YK</item>
    </string-array>

    <!-- School Activity -->
    <string-array name="school_gender_item">
        <item>미선택</item>
        <item>남자</item>
        <item>여자</item>
    </string-array>

    <string-array name="school_grade_item">
        <item>미선택</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="school_class_item">
        <item>미선택</item>
        <item>YA</item>
        <item>YB</item>
        <item>YC</item>
        <item>YD</item>
        <item>YJ</item>
        <item>YK</item>
    </string-array>

    <!--Study New Group Activity-->
    <string-array name="study_new_group_meet">
        <item>대면</item>
        <item>비대면</item>
    </string-array>

    <!--Change New Group Activity-->
    <string-array name="change_new_grade">
        <item>미선택</item>
        <item>1학년</item>
        <item>2학년</item>
        <item>3학년</item>
        <item>4학년</item>
    </string-array>

    <string-array name="change_new_now_class">
        <item>미선택</item>
        <item>YA</item>
        <item>YB</item>
        <item>YC</item>
        <item>YD</item>
        <item>YJ</item>
        <item>YK</item>
    </string-array>

    <string-array name="change_new_now_change_class">
        <item>미선택</item>
        <item>YA</item>
        <item>YB</item>
        <item>YC</item>
        <item>YD</item>
        <item>YJ</item>
        <item>YK</item>
    </string-array>

    <!--Change Update Group Activity-->
    <string-array name="change_update_grade">
        <item>미선택</item>
        <item>1학년</item>
        <item>2학년</item>
        <item>3학년</item>
        <item>4학년</item>
    </string-array>

    <string-array name="change_update_now_class">
        <item>미선택</item>
        <item>YA</item>
        <item>YB</item>
        <item>YC</item>
        <item>YD</item>
        <item>YJ</item>
        <item>YK</item>
    </string-array>

    <string-array name="change_update_now_change_class">
        <item>미선택</item>
        <item>YA</item>
        <item>YB</item>
        <item>YC</item>
        <item>YD</item>
        <item>YJ</item>
        <item>YK</item>
    </string-array>

    <string-array name="change_update_now_change_status">
        <item>교환 가능</item>
        <item>교환 대기</item>
        <item>교환 완료</item>
    </string-array>
</resources>