<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_menu_profile"
        android:enabled="true"
        android:title="@string/nav_item_profile" />
    <item
        android:id="@+id/nav_menu_study"
        android:enabled="true"
        android:title="@string/nav_item_study" />
    <item
        android:id="@+id/nav_menu_team"
        android:enabled="true"
        android:title="@string/nav_item_team" />
    <item
        android:id="@+id/nav_menu_group"
        android:enabled="true"
        android:title="@string/nav_item_group" />
    <item
        android:id="@+id/nav_menu_community"
        android:enabled="true"
        android:title="@string/nav_item_community" />
</menu>